examples/test/testpolicy5234.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5234
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key26: value28
      key13: value45
      key41: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value45
          key49: value35
          key40: value36
